apps/production/ml-portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio
  name: portfolio
  namespace: portfolio
spec:
  selector:
    app: portfolio
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
